--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,5 @@
 <h1>home works!</h1>
+<div class="container">
+  <h2>Welcome, {{ loggedInUser?.first_name }} {{ loggedInUser?.last_name }}!</h2>
+  <p>You are logged in ad Username: {{ loggedInUser?.u_name }}</p>
+</div>
