graphs renders right away

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,7 @@
-<h1>home works!</h1>
-<div class="container">
-  <h2>Welcome, {{ loggedInUser?.first_name }} {{ loggedInUser?.last_name }}!</h2>
-  <p>You are logged in ad Username: {{ loggedInUser?.u_name }}</p>
+<div class="container-fluid">
+  <h1 class="text-center">HOME!</h1>
+  <div class="container">
+    <h2>Welcome, {{ loggedInUser?.first_name }} {{ loggedInUser?.last_name }}!</h2>
+    <p>You are logged in ad Username: {{ loggedInUser?.u_name }}</p>
+  </div>
 </div>
