--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -1,8 +1,7 @@
-<h1>login works!</h1>
 
 <div class="container col-md-6 offset-md-3 mt-5">
   <div *ngIf="error" class="alert alert-danger">{{error}}</div>
-  <div class="card">
+  <div class="card m-auto mb-5">
     <h4 class="card-header">Login</h4>
     <div class="card-body">
       <form [formGroup]="form" (ngSubmit)="onSubmit()">
