--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -11,19 +11,13 @@
             <span class="visually-hidden">(current)</span>
           </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/login">login</a>
+        <li class="nav-item" *ngIf="!loggedIn">
+          <a class="nav-link" href="/login">LogIn</a>
         </li>
-<!--        <li class="nav-item dropdown">-->
-<!--          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>-->
-<!--          <div class="dropdown-menu">-->
-<!--            <a class="dropdown-item" href="#">Action</a>-->
-<!--            <a class="dropdown-item" href="#">Another action</a>-->
-<!--            <a class="dropdown-item" href="#">Something else here</a>-->
-<!--            <div class="dropdown-divider"></div>-->
-<!--            <a class="dropdown-item" href="#">Separated link</a>-->
-<!--          </div>-->
-<!--        </li>-->
+        <li class="nav-item"  *ngIf=loggedIn>
+          <a class="nav-link" href="/user/profile">Profile</a>
+        </li>
+
       </ul>
       <form class="d-flex">
         <input class="form-control me-sm-2" type="search" placeholder="Search">
